# graphite

./: .clang-format  .gitignore  CMakeLists.txt  license.md  readme.md
sample/: CMakeLists.txt
sample/kernels/: compile.cmd
sample/src/: main.cc
samples/: CMakeLists.txt
samples/testing/: CMakeLists.txt
samples/testing/kernels/: buffer-fill.slang  common.slang  compile.cmd  graphics-test.slang  image.slang  test.slang
samples/testing/src/: main.cc
src/: main.cc
src/core/: test.cc  test.hh
src/core/graphite/: gpu_adapter.cc  gpu_adapter.hh  imgui.hh  render_graph.cc  render_graph.hh  render_target.cc  render_target.hh  vram_bank.cc  vram_bank.hh
src/core/graphite/nodes/: compute_node.cc  compute_node.hh  node.cc  node.hh  raster_node.cc  raster_node.hh
src/core/graphite/resources/: buffer.hh  handle.cc  handle.hh  sampler.hh  stock.hh  texture.hh
src/core/graphite/utils/: debug.cc  debug.hh  enum_flags.hh  result.cc  result.hh  types.hh
src/platform/: platform.hh
src/platform/opengl/: test_gl.cc  test_gl.hh
src/platform/vulkan/: api_vk.cc  api_vk.hh  gpu_adapter_vk.cc  gpu_adapter_vk.hh  imgui_vk.cc  imgui_vk.hh  render_graph_vk.cc  render_graph_vk.hh  render_target_vk.cc  render_target_vk.hh  test_vk.cc  test_vk.hh  vram_bank_vk.cc  vram_bank_vk.hh
src/platform/vulkan/wrapper/: descriptor_vk.cc  descriptor_vk.hh  device_selection_vk.cc  device_selection_vk.hh  extensions_vk.cc  extensions_vk.hh  pipeline_cache_vk.cc  pipeline_cache_vk.hh  queue_selection_vk.cc  queue_selection_vk.hh  shader_vk.cc  shader_vk.hh  translate_vk.cc  translate_vk.hh
src/shell/graphite/: debug.cc  debug.hh  gpu_adapter.cc  gpu_adapter.hh  render_graph.cc  render_graph.hh  render_target.cc  render_target.hh  result.cc  result.hh  vram_bank.hh
src/shell/graphite/nodes/: compute_node.cc  compute_node.hh
